[gd_scene load_steps=3 format=2]

[ext_resource path="res://layout_elements/Enemy.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Enemy" type="Area2D" groups=[
"ResetOnRespawn",
]]
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NoAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="NoAttackFlickerTimer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Enemy_body_exited"]
[connection signal="timeout" from="NoAttackTimer" to="." method="_on_NoAttackTimer_timeout"]
[connection signal="timeout" from="NoAttackFlickerTimer" to="." method="_on_NoAttackFlickerTimer_timeout"]
